code/fuse/04_enrich-content-REST-and-WS-microservices/soap-backend-service/src/main/fabric8/soap-service-route.yml
apiVersion: v1
kind: Route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: soap-cxfws-service
    weight: 100
  wildcardPolicy: None
status: {}
